Prevent menu items wrapping on small screens

--- a/src/components/room/menu/roomMenu.css
+++ b/src/components/room/menu/roomMenu.css
@@ -16,6 +16,7 @@
 	text-transform: uppercase;
 	margin-right: 2rem;
 	color: rgba(255, 255, 255, 0.6);
+	white-space: nowrap;
 }
 
 .item:hover {
